# syscall-analyzer-ng

backend/aggregator/source/: Cargo.toml
backend/aggregator/source/src/: config.rs  lib.rs  main.rs
backend/aggregator/source/src/http/: error.rs  mod.rs
parser/rust/analyzer/: Cargo.toml  out.lst
parser/rust/analyzer/libs/helpers/: Cargo.toml
parser/rust/analyzer/libs/helpers/src/: converts.rs  helpers.rs  lib.rs
parser/rust/analyzer/libs/parsers/: Cargo.toml
parser/rust/analyzer/libs/parsers/src/: accept.rs  access.rs  arch_prctl.rs  brk.rs  chdir.rs  clone.rs  close.rs  default.rs  dup2.rs  epoll_create.rs  epoll_ctl.rs  epoll_wait.rs  eventfd.rs  execve.rs  fadvise64.rs  fallocate.rs  fanotifiy_init.rs  fanotify_mark.rs  fchmodat.rs  fcntl.rs  fdatasync.rs  fgetxattr.rs  flistxattr.rs  flock.rs  fork.rs  fstat.rs  fstatfs.rs  fsync.rs  ftruncate.rs  futex.rs  futex_requeue.rs  futex_wait.rs  futex_wake.rs  getdents64.rs  getpeername.rs  getpid.rs  getrandom.rs  getrlimit.rs  getsockname.rs  inotify_init.rs  (+50 more)
parser/rust/analyzer/libs/registry/: Cargo.toml
parser/rust/analyzer/libs/syscalls/src/: lib.rs  (+5 more)
parser/rust/analyzer/libs/trackers/: Cargo.toml
parser/rust/analyzer/libs/wrappers/: Cargo.toml
parser/rust/analyzer/src/: accept.rs  clone.rs  close.rs  default.rs  epoll_create.rs  examples.rs  fcntl.rs  file_output.rs  helpers.rs  init.rs  init.rs-to-merge  inputs.rs  lib.rs  listen.rs  logging.rs  main.rs  mmap.rs  munmap.rs  open.rs  openat.rs  pread64.rs  processors.rs  registrator.rs  registry.rs  sendmsg.rs  sendto.rs  socket.rs  syscall.rs
(+154 files in other folders)
