[package]
name = "analyzer-be"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.8.1", features = ["tower-log"] }
axum-server = "0.7.1"
hyper = "1.0"


# The `clap` beta gives us a much nicer way to define configuration parameters for our application.
clap = { version = "4.5.31", features = ["derive", "env"] }

serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.130"

# Axum builds on the types in Tower
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }


time = "0.3.37"

uuid = { version = "1.15.1", features = ["serde"] }

# Utility Crates
anyhow = "1.0.48"
async-trait = "0.1.51"
dotenv = "0.15.0"
env_logger = "0.11.6"
itertools = "0.14.0"
log = "0.4.14"
rand = "0.9.0"
thiserror = "2.0.12"

# Elastic search
elasticsearch = "8.17.0-alpha.1"
url = "2.5.4"