[package]
name = "analyzer"
version = "0.1.0"
edition = "2021"

[lib]
name = "modules"
path = "src/lib.rs"


[dependencies]
regex = "1.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
typetag = "0.2.19"
indexmap = { version = "2.7.1", features = ["serde"] }
parsers = { path = "libs/parsers" }
helpers = { path = "libs/helpers" }
registry = { path = "libs/registry"}
tokio = { version = "*", features = ["full"] }
elasticsearch = "8.17.0-alpha.1"
url = "2.5.4"